--- a/01.技術記事/20240717_銀行ポイ活自動化①.md
+++ b/01.技術記事/20240717_銀行ポイ活自動化①.md
@@ -184,7 +184,7 @@ class BankTransferAutomation:
 ## 実行
 
 ここまでのフォルダ構成はこんな感じです。
-`
+```bash
 $ tree
 .
 |-- .venv
@@ -193,7 +193,7 @@ $ tree
 `-- src
     |-- bank_transfer_automation.py
     `-- main.py
-`
+```
 
 呼び出し用のメイン処理を作成しておきます。
 
