--- a/01.技術記事/20240717_銀行ポイ活自動化①.md
+++ b/01.技術記事/20240717_銀行ポイ活自動化①.md
@@ -203,11 +203,11 @@ if __name__ == "__main__":
 ```
 
 ついでにbatファイルを作成してワンクリックで実行できるようにします。
-`bat:exe.bat
+```bat:exe.bat
 call .venv\Scripts\activate
 python -m src.main
 pause
-`
+```
 
 これでbatファイルを叩けば、自動で振り込みが行えるようになりました。実行結果は以下の通りです。
 
