--- a/01.技術記事/20240717_銀行ポイ活自動化①.md
+++ b/01.技術記事/20240717_銀行ポイ活自動化①.md
@@ -78,21 +78,23 @@ Windowsに構築することを想定して記載する
 ### 2. 仮想環境構築
 
 コマンドプロンプトを起動し、以下のコマンドを実行します。
-`bat
+
+```bat
 cd [任意のパス]
 mkdir [任意のフォルダ名]
 cd [任意のフォルダ名]
 python -m venv .venv
-`
+```
 
 ### 3. モジュール追加
 
 仮想環境をアクティベートした状態で、必要なモジュールを追加します。
-`bat
+
+```bat
 .venv\Scripts\activate
 pip install selenium==4.22.0
 pip install python-dotenv==1.0.1
-`
+```
 
 #### Selenium
 ブラウザ操作を自動化するために使用します。これから作るアプリでは中心的な役割を持ちます。
@@ -184,6 +186,7 @@ class BankTransferAutomation:
 ## 実行
 
 ここまでのフォルダ構成はこんな感じです。
+
 ```
 $ tree
 .
@@ -203,6 +206,7 @@ if __name__ == "__main__":
 ```
 
 ついでにbatファイルを作成してワンクリックで実行できるようにします。
+
 ```bat:exe.bat
 call .venv\Scripts\activate
 python -m src.main
