[FIX] image url

--- a/public/20240717_銀行ポイ活自動化①.md
+++ b/public/20240717_銀行ポイ活自動化①.md
@@ -24,7 +24,7 @@ ignorePublish: false
 * 銀行Aから銀行B、Cへの振込手数料は無料
 * 銀行B、Cの定額自動振込で行う場合はポイント付与の対象外
 
-    ![01.銀行自動振込_概要.png](../99.その他素材/01.銀行自動振込_概要.png)
+    ![01.銀行自動振込_概要.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/1681290/d9e94f47-f935-18d9-6ee8-2f8228d18e3a.png)
 
 つまり25回の振込を2口座分行えば、ひと月で1,000円。毎月欠かさずに行えば1年で12,000円の稼ぎとなります。
 ただしこれを手動で行うのは非常に手間です。
@@ -222,7 +222,7 @@ pause
 
 これでbatファイルを叩けば、自動で振り込みが行えるようになりました。実行結果は以下の通りです。
 
-![銀行自動振込_実行結果](../99.その他素材/03.銀行自動振込_実行結果.png)
+![03.銀行自動振込_実行結果.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/1681290/8891e113-14bd-0eae-07b6-fd923cbe891d.png)
 
 ちなみに通知の仕組みは作成していません。被振込側の銀行のユーザー設定にて、登録したメールアドレスに通知を飛ばすようにしているためです。
 
