[FIX] ①誤字脱字修正 ②記述追加

--- a/public/20240717_銀行ポイ活自動化①.md
+++ b/public/20240717_銀行ポイ活自動化①.md
@@ -14,20 +14,19 @@ ignorePublish: false
 ## はじめに
 
 本記事では、以下の内容について記載します。
-* Pythonを使用して銀行口座間の振込によるポイント活動を自動化する方法
+* 銀行口座間の振込によるポイ活
+* selenium を用いた振込作業の自動化
 
 ## 経緯
 
-被振込によりポイント獲得できるというサービスを、ある銀行が提供しています。(銀行口座名は念のため伏せます。)
-条件としては以下の通りです。
-* 10,000円以上の振込1回につき20ポイント獲得(ひと月に最大25回)
-* 銀行Aから銀行B、Cへの振込手数料は無料
-* 銀行B、Cの定額自動入金で行う場合はポイント付与の対象外
+銀行名は伏せますが、被振込によるポイント獲得が可能となる銀行があります。凡その概要は以下の通りです。
+* 10,000円以上の被振込1回につき20ポイント獲得(ひと月に最大25回)
+* 銀行Aから銀行B、Cへの振込手数料は無料(今のところ無制限)
+* 銀行B、Cの定額自動入金はポイント付与の対象外
 
     ![01.銀行自動振込_概要.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/1681290/d9e94f47-f935-18d9-6ee8-2f8228d18e3a.png)
 
-つまり25回の振込を2口座分行えば、ひと月で1,000円。毎月欠かさずに行えば1年で12,000円の稼ぎとなります。
-ただしこれを手動で行うのは非常に手間です。
+つまり25回の振込を2口座分行えば、ひと月で1,000円。毎月欠かさずに行えば1年で12,000円の稼ぎとなります。ただしこれを手動で行うのは非常に手間です。
 
 1. 振込元の銀行口座のアカウントにログイン
 2. 取引ページに遷移
@@ -35,27 +34,23 @@ ignorePublish: false
 4. 認証実行
 5. 振込結果参照
 
-具体的にはこのような手順を踏むことになりますが、1回の振込で大体3分ぐらいかかる感じです。
-それを25回もやるのは面倒すぎる！というわけで、**自動化して楽に1,000円稼ごう**、をモチベーションに作成しました。
+具体的にはこのような手順を踏むことになりますが、1回の振込で大体3分ぐらいかかる感じです。それを25回もやるのは面倒すぎるというわけで、**自動化して楽に1,000円稼ごう**、をモチベーションに作成しました。
 
 
 ## この記事の対象者
 
-* selenium を使ってブラウザの自動操作をやってみたい人
-* ~~銀行ポイ活を始めたい人~~
-* ~~振込を全て手動で頑張っている人~~
-
+* selenium を使ってブラウザの自動操作を試したい人
+* 銀行ポイ活を始めたい人
 
 ## 製造前に確認するべきこと
 
 ### 規約上問題ないかどうか確認する
 
-利用規約を熟読して自動アクセスを行っても問題ないことを確認しておくことをお勧めします。（違法行為にならないように注意しましょう）
+利用規約を熟読して自動アクセスを行っても問題ないかどうか確認しておくことをお勧めします。（違法行為にならないように注意）
 
 ### サーバーに与える負荷を軽減する
 
-短時間に大量のアクセスを行うと、Webサーバーに極度の負荷がかかる可能性があります。リクエスト間隔は十分に空けておくことを心がけましょう。
-今回採用した方法として、各関数に以下のようなデコレータを仕込み、リクエスト実行前に5~10秒待機させました。
+短時間に大量のアクセスを行うと、Webサーバーに極度の負荷がかかる可能性があります。リクエスト間隔は十分に空けておくことを心がけましょう。今回採用した方法として、各関数に以下のようなデコレータを仕込み、リクエスト実行前に5~10秒待機させました。
 
 ```python
 def wait_random_time(func: Callable) -> Callable:
@@ -77,14 +72,19 @@ def some_request():
 
 Windowsに構築することを想定して記載します。
 
-### 1. Python3.10をインストール
+### 1. Pythonをインストール
 
-3.10であることに理由はありません。たまたま自前のPCに入っているのが、このバージョンだったので使用しました。
-公式サイトからexeをダウンロードして実行すればよいです。
+↓こちらからインストーラーをダウンロードして実行してください。
+
+https://www.python.org/downloads/windows/
+
+私のPCには既に3.10のバージョンがインストールされているので、これを使用します。
+
+![銀行ポイ活自動化①_pythonバージョン.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/1681290/f4f0e2c9-8905-c3bf-d0cd-b0db9baf8c21.png)
 
 ### 2. 仮想環境構築
 
-コマンドプロンプトを起動し、以下のコマンドを実行します。
+本アプリ専用に独立した仮想環境を構築します。コマンドプロンプトを起動し、以下のコマンドを実行します。パスやフォルダ名は好きなようにしてください。
 
 ```bat
 cd [任意のパス]
@@ -95,7 +95,7 @@ python -m venv .venv
 
 ### 3. モジュール追加
 
-仮想環境をアクティベートした状態で、必要なモジュールを追加します。
+仮想環境をアクティベートした状態で、必要なモジュールを追加します。これでひとまず準備完了です。
 
 ```bat
 .venv\Scripts\activate
@@ -104,18 +104,26 @@ pip install python-dotenv==1.0.1
 ```
 
 #### Selenium
+
 ブラウザ操作を自動化するために使用します。これから作るアプリでは中心的な役割を持ちます。
 
 #### python-dotenv
-Pythonアプリケーション内で環境変数ファイル(.env)を読み込むために使用します。
-銀行にログインするときに必要なIDやパスワードをハードコーディングをせずに、環境変数ファイル(.env)に保持することにしました。
-（セキュリティ的にどうなのかという疑問は残りますが、とりあえず放置）
+
+Pythonアプリケーション内で環境変数ファイル(.env)を読み込むために使用します。銀行にログインするときに必要なIDやパスワードをハードコーディングをせずに、環境変数ファイル(.env)に保持することにしました。（セキュリティ的にどうなのかという疑問は残りますが、とりあえず放置）
 
 ## 処理の流れ
 
+基本的なフローとしては以下のようになります。
+
+1. Webブラウザ操作用のドライバーを作成
+2. 振込元銀行のマイページにログイン
+3. 取引ページに遷移
+4. 振込実行
+5. 認証実行
+
 ### 1. ドライバ作成
 
-ブラウザ操作を行うオブジェクトを生成します。いろいろオプションはあるようですが、今回は以下のようにします。
+ブラウザ操作を行うためのドライバーを生成します。いろいろオプションはあるようですが、今回は以下のようにします。
 * ユーザーエージェントは設定ファイルに記載した配列からランダムに選択
 * 余分なログ出力を抑制
 * 処理終了後にブラウザを閉じない
@@ -192,7 +200,7 @@ class BankTransferAutomation:
 
 フォルダ構成はこんな感じにしました。
 
-```bat
+```
 $ tree
 .
 |-- .env                             // 環境変数
