[FIX] ①微調整 ②記述追加

--- a/public/20240717_銀行ポイ活自動化①.md
+++ b/public/20240717_銀行ポイ活自動化①.md
@@ -19,14 +19,14 @@ ignorePublish: false
 
 ## 経緯
 
-銀行名は伏せますが、被振込によるポイント獲得が可能となる銀行があります。凡その概要は以下の通りです。
-* 10,000円以上の被振込1回につき20ポイント獲得(ひと月に最大25回)
-* 銀行Aから銀行B、Cへの振込手数料は無料(今のところ無制限)
+銀行名は伏せますが、被振込でポイントをいくらか獲得できる銀行があります。概要は以下の通りです。
+* 10,000円以上の被振込1回につき20ポイント獲得
+* ひと月に最大25回まで獲得可能
 * 銀行B、Cの定額自動入金はポイント付与の対象外
 
     ![01.銀行自動振込_概要.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/1681290/d9e94f47-f935-18d9-6ee8-2f8228d18e3a.png)
 
-つまり25回の振込を2口座分行えば、ひと月で1,000円。毎月欠かさずに行えば1年で12,000円の稼ぎとなります。ただしこれを手動で行うのは非常に手間です。
+銀行Aから銀行B、Cへの振込手数料は今のところ無料です。つまり25回の振込を2口座分行えば、ひと月で1,000円。毎月欠かさずに行えば1年で12,000円の稼ぎとなります。ただしこれを手動で行うのは非常に手間です。
 
 1. 振込元の銀行口座のアカウントにログイン
 2. 取引ページに遷移
@@ -230,10 +230,9 @@ pause
 
 ![03.銀行自動振込_実行結果.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/1681290/8891e113-14bd-0eae-07b6-fd923cbe891d.png)
 
-ちなみに通知の仕組みは作成していません。被振込側の銀行のユーザー設定にて、登録したメールアドレスに通知を飛ばすようにしているためです。
+ちなみに通知の仕組みは作成していません。振込を行った時、被振込側の銀行がメールで通知してくれるからです。
 
 
 ## さいごに
 
-ここまでかなりの省力化ができました。が、定期実行できるようになればクリックする手間すら不要になります。
-というわけで作成したPythonスクリプトをAWS上にデプロイして定期実行するようにします。手順は次の記事にて記載する予定です。
+ここまでかなりの省力化ができました。とは言え、実行するためにわざわざPCを立ち上げてbatを叩くという手間がまだ残っています。そこで、もっと楽をするために、作成したPythonスクリプトをAWS上にデプロイして定期実行するようにします。手順は次の記事にて記載する予定です。
