[FIX] 誤字脱字、画像修正

--- a/public/20240717_銀行ポイ活自動化①.md
+++ b/public/20240717_銀行ポイ活自動化①.md
@@ -24,17 +24,22 @@ ignorePublish: false
 * ひと月に最大25回まで獲得可能
 * 銀行B、Cの定額自動入金はポイント付与の対象外
 
-    ![01.銀行自動振込_概要.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/1681290/d9e94f47-f935-18d9-6ee8-2f8228d18e3a.png)
+    ![01.銀行自動振込_概要.png](https://qiita-image-store.s3.ap-northeast-1.amazonaws.com/0/1681290/69fc83ec-dfed-1d1c-4d20-2919d0a99632.png)
 
-銀行Aから銀行B、Cへの振込手数料は今のところ無料です。つまり25回の振込を2口座分行えば、ひと月で1,000円。毎月欠かさずに行えば1年で12,000円の稼ぎとなります。ただしこれを手動で行うのは非常に手間です。
+銀行Aから銀行B、Cへの振込手数料は今のところ無料です。つまり以下の手続きを踏めば、ひと月で1,000円の儲けになります。
 
-1. 振込元の銀行口座のアカウントにログイン
+1. 銀行Aから銀行B、Cに1万円ずつの振込を25回行う。
+2. 銀行B、Cから銀行Aに25万円戻す。(定額自動振込でOK)
+
+ただしこれを手動で行うのは非常に手間です。振込1回で行う作業は以下の通りです。
+
+1. 振込元の銀行Aのアカウントにログイン
 2. 取引ページに遷移
 3. 振込実行
 4. 認証実行
 5. 振込結果参照
 
-具体的にはこのような手順を踏むことになりますが、1回の振込で大体3分ぐらいかかる感じです。それを25回もやるのは面倒すぎるというわけで、**自動化して楽に1,000円稼ごう**、をモチベーションに作成しました。
+大体3分ぐらいかかる感じです。ひと月に25回もやるのは面倒すぎるというわけで、**自動化して楽に1,000円稼ごう**、をモチベーションに作成しました。
 
 
 ## この記事の対象者
@@ -67,6 +72,10 @@ def some_request():
   # 処理実行前に5~10秒待機する
   pass
 ```
+
+### 1日に複数回の振込は控える
+
+ただの推測ですが1日で25回もの振込をすれば、怪しい取引とみなされるのではないかなと。念のために1実行1振込となるようにしました。(口座利用の停止措置などは食らいたくないので)
 
 ## 環境構築
 
