--- a/public/20240801_銀行ポイ活自動化③.md
+++ b/public/20240801_銀行ポイ活自動化③.md
@@ -6,7 +6,7 @@ tags:
   - lambda
   - ECR
   - 銀行振込
-private: false
+private: true
 updated_at: '2024-08-06T22:01:34+09:00'
 id: b145683c79e90042cff7
 organization_url_name: null
