[FIX] 誤字脱字修正

--- a/public/20240730_銀行ポイ活自動化②.md
+++ b/public/20240730_銀行ポイ活自動化②.md
@@ -308,4 +308,4 @@ docker exec -it bank-auto-transfer python -m src.main
 
 ## さいごに
 
-Docker イメージをビルドし、ヘッドレスモードの動作確認まで完了しました。次は AWS 側の準備を進めます。手順は次の記事にて記載する予定です。
+Docker イメージをビルドし、ヘッドレスモードの動作確認まで完了しました。続いて AWS にデプロイする準備を進めます。手順は次の記事にて記載する予定です。
